[package]
authors = ["ChiHai <ihciah@gmail.com>"]
categories = ["asynchronous", "network-programming"]
description = "Thrift for Monoio."
edition = "2021"
keywords = ["async", "thrift", "monoio"]
license = "MIT/Apache-2.0"
name = "monoio-codec"
readme = "README.md"
repository = "https://github.com/monoio-rs/monoio-thrift"
version = "0.0.0"

[dependencies]
monoio = "0.2.0"
monoio-codec = "0.3.0"

bytes = "1"
