[package]
authors = ["ChiHai <ihciah@gmail.com>"]
categories = ["asynchronous", "network-programming"]
description = "Thrift for Monoio."
edition = "2021"
keywords = ["async", "thrift", "monoio"]
license = "MIT/Apache-2.0"
name = "monoio-thrift"
readme = "README.md"
repository = "https://github.com/monoio-rs/monoio-thrift"
version = "0.0.1"

[dependencies]
monoio = "0.2.0"
monoio-codec = "0.3.0"

bytes = "1"
byteorder = "1"
smallvec = "1"
small-map = "0.1"
smol_str = "0.2"
num_enum = "0.7"
tracing = "0.1"
